# desafio_ros2_verlab_2025.1

./: .gitignore  README.md
src/scout_avoid_walls/: CMakeLists.txt  package.xml
src/scout_avoid_walls/include/scout_avoid_walls/: wall_avoider.hpp
src/scout_avoid_walls/src/: main.cpp  wall_avoider.cpp
src/scout_avoid_walls_3d/: CMakeLists.txt  package.xml
src/scout_avoid_walls_3d/include/scout_avoid_walls_3d/: wall_avoider.hpp
src/scout_avoid_walls_3d/src/: main.cpp  wall_avoider.cpp
src/scout_description/: package.xml
src/scout_description/rviz/: scout_mini.rviz
src/scout_description/urdf/: scout_mini.xacro
src/scout_gazebo_sim/: package.xml
src/scout_gazebo_sim/config/: scout_mini_bridge_ros_gz.yaml
src/scout_gazebo_sim/launch/: scout_mini_empty_world.launch.py  scout_mini_test_world.launch.py
src/scout_gazebo_sim/worlds/: test.world
